--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/test/(.*)", "destination": "/test" }]
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
